colocando as classes anside

--- a/index.html
+++ b/index.html
@@ -65,18 +65,21 @@
     </picture>
     <div class="container">
       <div class="texto-img1">
+        <div class="box-margin-botton">
         <p>Para que as decisões <br>
           da Diretoria Colegiada <br>
           da ANA são precedidas <br>
           de processos participativos?
-        </p>
+        </p></div>
         <div class="box-branco">
           <div class="container-box">
             <div class="flex-box">
-              <div class="box-azul1">
+              <div class="box-azul1 anside1">
                 <div class="center">
                   <img src="./Ilustra-card.png" alt="" srcset="">
                 </div>
+                <p class="text-box">Propiciar aos interessados envolvidos a possibilidade de encaminhar opiniões e
+                  sugestões</p>
               </div>
               <div class="box-vermelho">
                 <div class="center">
@@ -91,10 +94,12 @@
           </div>
           <div class="container-box">
             <div class="flex-box">
-              <div class="box-azul3">
+              <div class="box-azul3 anside3">
                 <div class="box-text-end">
                   <img src="./Ilustra-card3.png" alt="" srcset="">
                 </div>
+                <p class="text-box">Propiciar aos interessados envolvidos a possibilidade de encaminhar opiniões e
+                  sugestões</p>
               </div>
               <div class="box-vermelho">
                 <div class="center">
