ajustando os boxs

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <p class="text-box">Propiciar aos interessados envolvidos a possibilidade de encaminhar opiniões e
                   sugestões</p>
               </div>
-              <div class="box-vermelho">
+              <div class="box-vermelho anside2">
                 <div class="center">
                   <img src="./Ilustra-card2.png" alt="" srcset="">
 
@@ -101,9 +101,9 @@
                 <p class="text-box">Propiciar aos interessados envolvidos a possibilidade de encaminhar opiniões e
                   sugestões</p>
               </div>
-              <div class="box-vermelho">
+              <div class="box-azul1 anside4">
                 <div class="center">
-                  <img src="./Ilustra-card2.png" alt="" srcset="">
+                  <img src="./Ilustra-card4.png" alt="" srcset="">
 
                 </div>
                 <p class="text-box">Propiciar aos interessados envolvidos a possibilidade de encaminhar opiniões e
