atualizacao de sexta

--- a/index.html
+++ b/index.html
@@ -119,8 +119,20 @@
 
     </div>
   </div>
-  <div class="container nav-main conteudo position">
-    <div class="">
+  <div class="container  conteudo position ">
+<div class="container-box nav-main justify-center ">
+
+    <div class="texto-main-top">
+      <p>
+        Quem são os principais beneficiados
+        por essas decisões?
+      </p>
+
+    </div></div>
+  </div>
+  <div class="container  conteudo position">
+    <div class="container-box nav-main ">
+    <div class="nav-margin">
 
       <picture>
         <source srcset="./Rectangle-MB3074.png" media="(max-width: 768px)">
@@ -136,10 +148,12 @@
 
     </div>
   </div>
-  <div class="container nav-main conteudo position">
-    <div class="texto-main">
+  </div>
+  <div class="container  conteudo position">
+    <div class="container-box nav-main">
+    <div class="texto-main nav-margin">
       <p>
-        Usuários dos recursos hídricos
+        Entes do Sistema Nacional de Gerenciamento de Recursos Hídricos (SINGREH)
       </p>
 
     </div>
@@ -152,10 +166,11 @@
       </picture>
 
     </div>
-
+</div>
   </div>
-  <div class="container nav-main conteudo position">
-    <div class="">
+  <div class="container  conteudo position">
+    <div class="container-box nav-main">
+    <div class="nav-margin">
 
       <picture>
         <source srcset="./Rectangle-MB3074.png" media="(max-width: 768px)">
@@ -166,10 +181,10 @@
     </div>
     <div class="texto-main">
       <p>
-        Usuários dos recursos hídricos
+        Agentes econômicos
       </p>
 
-    </div>
+    </div></div>
   </div>
   <div class="container-img">
     <picture>
