--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="img-head">
           <picture>
             <source srcset="./globe-2.png" media="(max-width: 768px)">
-            <img class="img-head-size" src="./globe 2DT2.png" alt="MDN">
+            <img class="img-head-size" src="./Group-1299.png" alt="MDN">
           </picture>
         </div>
       </nav>
@@ -76,7 +76,9 @@
           <div class="container-box">
             <div class="flex-box">
               <div class="box-azul1 anside1">
-                <div class="center">
+                <div class="center ">
+                  <div class="table-cell">
+                  <p class="box-1">1</p></div>
                   <img src="./Ilustra-card.png" alt="" srcset="">
                 </div>
                 <p class="text-box">Propiciar aos interessados envolvidos a possibilidade de encaminhar opiniões e
