--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
               </div>
               <div class="box-vermelho anside2">
                 <div class="center">
+                  <div class="table-cell">
+                    <p class="box-1">2</p>
+                  </div>
                   <img src="./Ilustra-card2.png" alt="" srcset="">
 
                 </div>
@@ -99,7 +102,11 @@
           <div class="container-box">
             <div class="flex-box">
               <div class="box-azul3 anside3">
+                <div class="table-cell">
+                  <p class="box-1">3</p>
+                </div>
                 <div class="box-text-end">
+                  
                   <img src="./Ilustra-card3.png" alt="" srcset="">
                 </div>
                 <p class="text-box">Identificar, da forma mais ampla possível, todos os aspectos relevantes da matéria
@@ -107,6 +114,9 @@
               </div>
               <div class="box-azul1 anside4">
                 <div class="center">
+                  <div class="table-cell">
+                    <p class="box-1">4</p>
+                  </div>
                   <img src="./Ilustra-card4.png" alt="" srcset="">
 
                 </div>
