--- a/index.html
+++ b/index.html
@@ -214,6 +214,13 @@
         <div class="box-branco">
           <div class="container-box">
             <div class="">
+              <div class=" anside-top">
+                <div class="center-top">
+                  <p class="text-box-top">Quais são os meios de participação?</p>
+
+                </div>
+
+              </div>
               <div class="box-vermelho  anside-bottom">
                 <div class="num-box">
 
@@ -222,6 +229,7 @@
                   </div>
                 </div>
                 <div class="teste-display">
+
                   <div class="width-50-bottom">
 
                     <p class="text-box-1">Consultas e audiências públicas</p>
@@ -250,11 +258,11 @@
 
                 </div>
               </div>
-              <div class="box-vermelho  anside-bottom">
+              <div class="box-azul-bottom-1 anside-bottom">
                 <div class="num-box">
 
                   <div class="table-cell ">
-                    <p class="margin-0">1</p>
+                    <p class="margin-0">2</p>
                   </div>
                 </div>
                 <div class="teste-display">
@@ -266,7 +274,43 @@
                     <div>
                       <picture>
                         <source srcset="./vermelho-box-bottom-mb.png" media="(max-width: 768px)">
-                        <img src="./Illustra-vermelho-box-bottom.png" alt="" srcset="">
+                        <img src="./Illustra-box-bottom-2.png" alt="" srcset="">
+                      </picture>
+
+                    </div>
+                    <div class="botao-preto">
+                      <svg class="size" width="58" height="58" viewBox="0 0 58 58" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                          d="M7.25 0C5.32718 0 3.48311 0.763837 2.12348 2.12348C0.763837 3.48311 0 5.32718 0 7.25L0 50.75C0 52.6728 0.763837 54.5169 2.12348 55.8765C3.48311 57.2362 5.32718 58 7.25 58H50.75C52.6728 58 54.5169 57.2362 55.8765 55.8765C57.2362 54.5169 58 52.6728 58 50.75V7.25C58 5.32718 57.2362 3.48311 55.8765 2.12348C54.5169 0.763837 52.6728 0 50.75 0L7.25 0ZM27.7167 38.5918C27.3764 38.9321 27.1852 39.3937 27.1852 39.875C27.1852 40.3563 27.3764 40.8179 27.7167 41.1582C28.0571 41.4986 28.5187 41.6898 29 41.6898C29.4813 41.6898 29.9429 41.4986 30.2833 41.1582L41.1582 30.2833C41.327 30.1149 41.461 29.9149 41.5523 29.6947C41.6437 29.4745 41.6907 29.2384 41.6907 29C41.6907 28.7616 41.6437 28.5255 41.5523 28.3053C41.461 28.0851 41.327 27.8851 41.1582 27.7167L30.2833 16.8417C30.1147 16.6732 29.9147 16.5396 29.6945 16.4484C29.4743 16.3572 29.2383 16.3102 29 16.3102C28.7617 16.3102 28.5257 16.3572 28.3055 16.4484C28.0853 16.5396 27.8853 16.6732 27.7167 16.8417C27.5482 17.0103 27.4146 17.2103 27.3234 17.4305C27.2322 17.6507 27.1852 17.8867 27.1852 18.125C27.1852 18.3633 27.2322 18.5993 27.3234 18.8195C27.4146 19.0397 27.5482 19.2397 27.7167 19.4083L35.4996 27.1875H18.125C17.6443 27.1875 17.1833 27.3785 16.8434 27.7184C16.5035 28.0583 16.3125 28.5193 16.3125 29C16.3125 29.4807 16.5035 29.9417 16.8434 30.2816C17.1833 30.6215 17.6443 30.8125 18.125 30.8125H35.4996L27.7167 38.5918Z"
+                          fill="#2B2B2B" />
+                      </svg>
+                    </div>
+
+
+
+                  </div>
+
+
+                </div>
+              </div>
+              <div class="box-azul-bottom-2  anside-bottom">
+                <div class="num-box">
+
+                  <div class="table-cell ">
+                    <p class="margin-0">3</p>
+                  </div>
+                </div>
+                <div class="teste-display">
+                  <div class="width-50-bottom">
+
+                    <p class="text-box-1">Consultas e audiências públicas</p>
+                  </div>
+                  <div class="teste-img">
+                    <div>
+                      <picture>
+                        <source srcset="./vermelho-box-bottom-mb.png" media="(max-width: 768px)">
+                        <img src="./Illustra-box-bottom-1.png" alt="" srcset="">
                       </picture>
 
                     </div>
@@ -290,7 +334,7 @@
                 <div class="num-box">
 
                   <div class="table-cell ">
-                    <p class="margin-0">1</p>
+                    <p class="margin-0">4</p>
                   </div>
                 </div>
                 <div class="teste-display">
@@ -302,7 +346,7 @@
                     <div>
                       <picture>
                         <source srcset="./vermelho-box-bottom-mb.png" media="(max-width: 768px)">
-                        <img src="./Illustra-vermelho-box-bottom.png" alt="" srcset="">
+                        <img src="./Illustra-box-bottom-vermelho-2.png" alt="" srcset="">
                       </picture>
 
                     </div>
@@ -322,11 +366,11 @@
 
                 </div>
               </div>
-              <div class="box-vermelho  anside-bottom">
+              <div class="box-azul-bottom-5  anside-bottom">
                 <div class="num-box">
 
                   <div class="table-cell ">
-                    <p class="margin-0">1</p>
+                    <p class="margin-0">5</p>
                   </div>
                 </div>
                 <div class="teste-display">
@@ -338,43 +382,7 @@
                     <div>
                       <picture>
                         <source srcset="./vermelho-box-bottom-mb.png" media="(max-width: 768px)">
-                        <img src="./Illustra-vermelho-box-bottom.png" alt="" srcset="">
-                      </picture>
-
-                    </div>
-                    <div class="botao-preto">
-                      <svg class="size" width="58" height="58" viewBox="0 0 58 58" fill="none"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" clip-rule="evenodd"
-                          d="M7.25 0C5.32718 0 3.48311 0.763837 2.12348 2.12348C0.763837 3.48311 0 5.32718 0 7.25L0 50.75C0 52.6728 0.763837 54.5169 2.12348 55.8765C3.48311 57.2362 5.32718 58 7.25 58H50.75C52.6728 58 54.5169 57.2362 55.8765 55.8765C57.2362 54.5169 58 52.6728 58 50.75V7.25C58 5.32718 57.2362 3.48311 55.8765 2.12348C54.5169 0.763837 52.6728 0 50.75 0L7.25 0ZM27.7167 38.5918C27.3764 38.9321 27.1852 39.3937 27.1852 39.875C27.1852 40.3563 27.3764 40.8179 27.7167 41.1582C28.0571 41.4986 28.5187 41.6898 29 41.6898C29.4813 41.6898 29.9429 41.4986 30.2833 41.1582L41.1582 30.2833C41.327 30.1149 41.461 29.9149 41.5523 29.6947C41.6437 29.4745 41.6907 29.2384 41.6907 29C41.6907 28.7616 41.6437 28.5255 41.5523 28.3053C41.461 28.0851 41.327 27.8851 41.1582 27.7167L30.2833 16.8417C30.1147 16.6732 29.9147 16.5396 29.6945 16.4484C29.4743 16.3572 29.2383 16.3102 29 16.3102C28.7617 16.3102 28.5257 16.3572 28.3055 16.4484C28.0853 16.5396 27.8853 16.6732 27.7167 16.8417C27.5482 17.0103 27.4146 17.2103 27.3234 17.4305C27.2322 17.6507 27.1852 17.8867 27.1852 18.125C27.1852 18.3633 27.2322 18.5993 27.3234 18.8195C27.4146 19.0397 27.5482 19.2397 27.7167 19.4083L35.4996 27.1875H18.125C17.6443 27.1875 17.1833 27.3785 16.8434 27.7184C16.5035 28.0583 16.3125 28.5193 16.3125 29C16.3125 29.4807 16.5035 29.9417 16.8434 30.2816C17.1833 30.6215 17.6443 30.8125 18.125 30.8125H35.4996L27.7167 38.5918Z"
-                          fill="#2B2B2B" />
-                      </svg>
-                    </div>
-
-
-
-                  </div>
-
-
-                </div>
-              </div>
-              <div class="box-vermelho  anside-bottom">
-                <div class="num-box">
-
-                  <div class="table-cell ">
-                    <p class="margin-0">1</p>
-                  </div>
-                </div>
-                <div class="teste-display">
-                  <div class="width-50-bottom">
-
-                    <p class="text-box-1">Consultas e audiências públicas</p>
-                  </div>
-                  <div class="teste-img">
-                    <div>
-                      <picture>
-                        <source srcset="./vermelho-box-bottom-mb.png" media="(max-width: 768px)">
-                        <img src="./Illustra-vermelho-box-bottom.png" alt="" srcset="">
+                        <img src="./Illustra-box-bottom-azul-ultimo.png" alt="" srcset="">
                       </picture>
 
                     </div>
@@ -406,12 +414,13 @@
           <div class="conteudo-footer">
             <div class="justify-center">
               <div class="central-box">
-                <div class="box-azul1">
+                <div class="box-azul1 anside-dowload">
                   <div class="center">
-                    <img src="./Ilustra-card.png" alt="" srcset="">
+                    <p class="text-box">Para obter mais informações,
+                      se cadastrar e participar, faça o download do nosso manual.</p>
+                    <img src="./bi_download.png" alt="" srcset="">
                   </div>
-                  <p class="text-box">Propiciar aos interessados envolvidos a possibilidade de encaminhar opiniões e
-                    sugestões</p>
+
                 </div>
               </div>
             </div>
