atualizacao de terca

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <picture>
             <source media="(min-width:750px)" srcset="./Logo-ANA-DT.png">
             <source media="(max-width:465px)" srcset="./Logo-ANA-MB.png">
-            <img src="./Group.png">
+            <img src="./Logo-ANA-DT.png">
           
           </picture>
         </div>
@@ -175,12 +175,13 @@
     </div>
   </div>
   <div class="container  conteudo position">
-    <div class="container-box nav-main ">
+    <div class="container-box nav-main-1 ">
       <div class="nav-margin">
 
         <picture>
-          <source srcset="./Rectangle-MB3074.png" media="(max-width: 768px)">
+          <source srcset="./img-main-1.png" media="(max-width: 768px)">
           <img src="./Ilustra-nav.png" alt="" srcset="" />
+         
 
         </picture>
 
@@ -204,7 +205,7 @@
       <div class="">
 
         <picture>
-          <source srcset="./Rectangle-MB3074.png" media="(max-width: 768px)">
+          <source srcset="./img-main-2.png" media="(max-width: 768px)">
           <img src="./Ilustra-nav2.png" alt="" srcset="" />
 
         </picture>
@@ -217,7 +218,7 @@
       <div class="nav-margin">
 
         <picture>
-          <source srcset="./Rectangle-MB3074.png" media="(max-width: 768px)">
+          <source srcset="./img-main-3.png" media="(max-width: 768px)">
           <img src="./Ilustra-nav3.png" alt="" srcset="" />
 
         </picture>
@@ -449,7 +450,7 @@
               <div class="central-box">
                 <div class="box-azul1 anside-dowload">
                   <div class="center">
-                    <p class="text-box">Para obter mais informações,
+                    <p class="text-box-dowload">Para obter mais informações,
                       se cadastrar e participar, faça o download do nosso manual.</p>
                     <img src="./bi_download.png" alt="" srcset="">
                   </div>
