max-width do boxs

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="img-head">
           <picture>
 
-            <source srcset="./Group-1299.png" media="(max-width: 768px)">
+            <source srcset="./Group-1299.png" media="(max-width: 930px)">
             <img class="img-head-size" src="./Group-1299.png" alt="MDN">
           </picture>
         </div>
@@ -54,7 +54,7 @@
       </div>
       <div class="com">
         <picture>
-          <source srcset="./mulher-mb.png" media="(max-width: 768px)">
+          <source srcset="./mulher-mb.png" media="(max-width: 930px)">
           <img src="./mulher.png" alt="" srcset="">
 
         </picture>
@@ -66,7 +66,7 @@
 
   <div class="container-img top-">
     <picture>
-      <source srcset="./fundo-mob-1.png" media="(max-width: 768px)">
+      <source srcset="./fundo-mob-1.png" media="(max-width: 930px)">
       <img class="container-img-object-1" src="./fundo_1.png" alt="" srcset="">
 
 
@@ -92,7 +92,7 @@
 
                   <picture>
                     <source srcset="./Ilustra-card-MB.png" media="(max-width: 768px)">
-                    <img src="./Ilustra-card.png" alt="" srcset="">
+                    <img src="./Ilustra-card.png" alt="" srcset="" class="max-with-card">
 
 
                   </picture>
@@ -109,7 +109,7 @@
 
                   <picture>
                     <source srcset="./Ilustra-card-1-MB.png" media="(max-width: 768px)">
-                    <img src="./Ilustra-card2.png" alt="" srcset="">
+                    <img src="./Ilustra-card2.png" alt="" srcset="" class="max-with-card">
 
 
                   </picture>
@@ -131,7 +131,7 @@
                 <div class="box-text-end">
                   <picture>
                     <source srcset="./Ilustra-card-2-MB.png" media="(max-width: 768px)">
-                    <img src="./Ilustra-card3.png" alt="" srcset="">
+                    <img src="./Ilustra-card3.png" alt="" srcset="" class="max-with-card">
 
 
                   </picture>
@@ -148,7 +148,7 @@
 
                   <picture>
                     <source srcset="./Ilustra-card-3-MB.png" media="(max-width: 768px)">
-                    <img src="./Ilustra-card4.png" alt="" srcset="">
+                    <img src="./Ilustra-card4.png" alt="" srcset="" class="max-with-card">
 
 
                   </picture>
