--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="apple-touch-icon" href="apple-touch-icon.png" />
   <link rel="stylesheet" href="css/normalize.min.css" />
-  <link rel="stylesheet" href="css/dectop-large.css" />
+  <link rel="stylesheet" href="css/desctop-large.css" />
   <link rel="stylesheet" href="css/desctop.css" />
   <link rel="stylesheet" href="css/tablet.css" />
   <link rel="stylesheet" href="css/mobile.css" />
@@ -273,7 +273,7 @@
                     <div>
                       <picture>
                         <source srcset="./img-bottom-1-mb.png" media="(max-width: 768px)">
-                        <img src="./Illustra-vermelho-box-bottom.png" alt="" srcset="">
+                        <img src="./Illustra-vermelho-box-bottom.png" alt="" srcset="" class="margin-cards-1-2-4-5">
 
                       </picture>
 
@@ -310,7 +310,7 @@
                     <div>
                       <picture>
                         <source srcset="./box-bottom-vermelho-1-mb.png" media="(max-width: 768px)">
-                        <img src="./Illustra-box-bottom-2.png" alt="" srcset="">
+                        <img src="./Illustra-box-bottom-2.png" alt="" srcset="" class="margin-cards-2-3">
                       </picture>
 
                     </div>
@@ -346,7 +346,7 @@
                     <div>
                       <picture>
                         <source srcset="./box-azul-bottom-2.png" media="(max-width: 768px)">
-                        <img src="./Illustra-box-bottom-1.png" alt="" srcset="">
+                        <img src="./Illustra-box-bottom-1.png" alt="" srcset="" class="margin-cards-2-3">
 
                       </picture>
 
@@ -383,7 +383,7 @@
                     <div>
                       <picture>
                         <source srcset="./vermelho-box-bottom-mb.png" media="(max-width: 768px)">
-                        <img src="./Illustra-box-bottom-vermelho-2.png" alt="" srcset="">
+                        <img src="./Illustra-box-bottom-vermelho-2.png" alt="" srcset="" class="margin-cards-1-2-4-5">
                       </picture>
 
                     </div>
@@ -419,7 +419,7 @@
                     <div>
                       <picture>
                         <source srcset="./img-azul-ultima-mb.png" media="(max-width: 768px)">
-                        <img src="./Illustra-box-bottom-azul-ultimo.png" alt="" srcset="">
+                        <img src="./Illustra-box-bottom-azul-ultimo.png" alt="" srcset="" class="margin-cards-1-2-4-5">
 
                       </picture>
 
@@ -456,7 +456,13 @@
                   <div class="center">
                     <p class="text-box-dowload">Para obter mais informações,
                       se cadastrar e participar, faça o download do nosso manual.</p>
-                    <img src="./bi_download.png" alt="" srcset="">
+
+                    <picture>
+
+                      <source srcset="./dowload-mb.png" media="(max-width: 930px)" class="margin-15px">
+                      <img src="./dowload-DT.png" alt="" srcset="" class="margin-15px">
+
+                    </picture>
                   </div>
 
                 </div>
@@ -470,7 +476,7 @@
                   xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M16.6371 18.2363L17.5434 12.4108H11.7819V8.61156C11.7819 6.96523 12.5587 5.44555 15.1482 5.44555H17.8023V0.443242C17.8023 0.443242 15.4071 0 13.1414 0C8.41565 0 5.30833 2.84941 5.30833 7.91504V12.4108H0V18.2363H5.30833V32.42H11.7819V18.2363H16.6371Z"
-                    fill="currentColor" />
+                    fill="rgba(43, 43, 43, 1)" />
                 </svg>
 
 
@@ -481,34 +487,34 @@
                   xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M29.7137 6.66779C31.0084 5.69675 32.1737 4.53151 33.08 3.17206C31.9147 3.68994 30.5553 4.07835 29.1958 4.20782C30.62 3.36626 31.6558 2.07155 32.1737 0.453156C30.879 1.22998 29.39 1.81261 27.9011 2.13629C26.6064 0.77684 24.8585 0 22.9165 0C19.1618 0 16.1192 3.0426 16.1192 6.79727C16.1192 7.31516 16.1839 7.83304 16.3134 8.35092C10.6814 8.02724 5.63201 5.30834 2.26575 1.22998C1.68313 2.20102 1.35947 3.36626 1.35947 4.66098C1.35947 6.99147 2.5247 9.06302 4.40204 10.293C3.30153 10.2283 2.20101 9.9693 1.29471 9.45142V9.51614C1.29471 12.8177 3.6252 15.5366 6.73251 16.1839C6.21463 16.3134 5.56727 16.4429 4.98465 16.4429C4.5315 16.4429 4.14309 16.3782 3.68994 16.3134C4.53151 19.0323 7.05621 20.9744 10.0341 21.0391C7.70357 22.8517 4.79046 23.9522 1.61841 23.9522C1.03579 23.9522 0.517886 23.8875 0 23.8228C2.97785 25.7648 6.53831 26.8653 10.4225 26.8653C22.9165 26.8653 29.7137 16.5724 29.7137 7.5741C29.7137 7.25042 29.7137 6.99146 29.7137 6.66779Z"
-                    fill="currentColor" />
+                    fill="rgba(43, 43, 43, 1)" />
                 </svg>
 
                 <svg class="margin-r" width="30" height="30" viewBox="0 0 30 30" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M14.5332 7.02383C10.3901 7.02383 7.08859 10.3901 7.08859 14.4684C7.08859 18.6115 10.3901 21.9131 14.5332 21.9131C18.6116 21.9131 21.9778 18.6115 21.9778 14.4684C21.9778 10.3901 18.6116 7.02383 14.5332 7.02383ZM14.5332 19.3236C11.879 19.3236 9.67801 17.1873 9.67801 14.4684C9.67801 11.8143 11.8143 9.67801 14.5332 9.67801C17.1874 9.67801 19.3236 11.8143 19.3236 14.4684C19.3236 17.1873 17.1874 19.3236 14.5332 19.3236ZM23.9846 6.76489C23.9846 5.79385 23.2078 5.01702 22.2368 5.01702C21.2657 5.01702 20.4889 5.79385 20.4889 6.76489C20.4889 7.73593 21.2657 8.51275 22.2368 8.51275C23.2078 8.51275 23.9846 7.73593 23.9846 6.76489ZM28.9045 8.51275C28.7751 6.18227 28.2572 4.11071 26.5741 2.42758C24.8909 0.744447 22.8194 0.226575 20.4889 0.0971037C18.0937 -0.0323679 10.908 -0.0323679 8.51275 0.0971037C6.18227 0.226575 4.17548 0.744447 2.42761 2.42758C0.744479 4.11071 0.226575 6.18227 0.0971037 8.51275C-0.0323679 10.908 -0.0323679 18.0937 0.0971037 20.4889C0.226575 22.8194 0.744479 24.8262 2.42761 26.574C4.17548 28.2572 6.18227 28.775 8.51275 28.9045C10.908 29.034 18.0937 29.034 20.4889 28.9045C22.8194 28.775 24.8909 28.2572 26.5741 26.574C28.2572 24.8262 28.7751 22.8194 28.9045 20.4889C29.034 18.0937 29.034 10.908 28.9045 8.51275ZM25.7972 23.0135C25.3441 24.3083 24.3083 25.2793 23.0783 25.7972C21.1362 26.574 16.6047 26.3798 14.5332 26.3798C12.3969 26.3798 7.8654 26.574 5.98806 25.7972C4.69335 25.2793 3.72232 24.3083 3.20443 23.0135C2.4276 21.1362 2.62182 16.6047 2.62182 14.4684C2.62182 12.3969 2.4276 7.86541 3.20443 5.92334C3.72232 4.69336 4.69335 3.72232 5.98806 3.20443C7.8654 2.4276 12.3969 2.62179 14.5332 2.62179C16.6047 2.62179 21.1362 2.4276 23.0783 3.20443C24.3083 3.65758 25.2794 4.69336 25.7972 5.92334C26.5741 7.86541 26.3798 12.3969 26.3798 14.4684C26.3798 16.6047 26.5741 21.1362 25.7972 23.0135Z"
-                    fill="currentColor" />
+                    fill="rgba(43, 43, 43, 1)" />
                 </svg>
 
                 <svg class="margin-r" width="36" height="25" viewBox="0 0 36 25" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M34.6613 3.95963C34.2729 2.40597 33.0429 1.17598 31.554 0.787567C28.7704 0.0107377 17.765 0.0107422 17.765 0.0107422C17.765 0.0107422 6.69514 0.0107377 3.9115 0.787567C2.42258 1.17598 1.19258 2.40597 0.804169 3.95963C0.0273393 6.67853 0.0273438 12.5047 0.0273438 12.5047C0.0273438 12.5047 0.0273393 18.2662 0.804169 21.0499C1.19258 22.6035 2.42258 23.7687 3.9115 24.1572C6.69514 24.8693 17.765 24.8693 17.765 24.8693C17.765 24.8693 28.7704 24.8693 31.554 24.1572C33.0429 23.7687 34.2729 22.6035 34.6613 21.0499C35.4381 18.2662 35.4382 12.5047 35.4382 12.5047C35.4382 12.5047 35.4381 6.67853 34.6613 3.95963ZM14.1397 17.7484V7.26114L23.3322 12.5047L14.1397 17.7484Z"
-                    fill="currentColor" />
+                    fill="rgba(43, 43, 43, 1)" />
                 </svg>
 
                 <svg class="margin-r" width="34" height="33" viewBox="0 0 34 33" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M7.78245 32.4205V10.5465H0.511963V32.4205H7.78245ZM4.14815 7.55812C6.6835 7.55812 8.26163 5.87845 8.26163 3.77942C8.21439 1.63305 6.68359 0 4.19626 0C1.70932 0 0.0830078 1.63308 0.0830078 3.77942C0.0830078 5.87855 1.66075 7.55812 4.10068 7.55812H4.14815ZM11.8066 32.4205H19.0771V20.205C19.0771 19.5512 19.1244 18.8981 19.3164 18.4308C19.842 17.1246 21.0383 15.7718 23.0467 15.7718C25.6776 15.7718 26.7301 17.7777 26.7301 20.7182V32.4204H34.0001V19.878C34.0001 13.1591 30.4132 10.0329 25.6297 10.0329C21.7075 10.0329 19.9855 12.2252 19.0288 13.7184H19.0773V10.546H11.8068C11.9022 12.5985 11.8066 32.4205 11.8066 32.4205Z"
-                    fill="currentColor" />
+                    fill="rgba(43, 43, 43, 1)" />
                 </svg>
               </div>
               <div class="logo-footer">
                 <picture>
                   <source srcset="./GroupMB-footer.svg" media="(max-width: 768px)">
-                  <img src="./Group-DT-footer.svg">
+                  <img src="./logo-preto.png">
                 </picture>
               </div>
             </footer>
