--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="main container clearfix display">
       <div class="">
         <p class="conteudo">
-          Saiba como participar das decisões da ANA
+          Participação Social
         </p>
         <p class="sub">A Agência Nacional de Águas e Saneamento Básico (ANA) busca se alinhar às melhores práticas de
           transparência. Por isso, utiliza vários meios para estimular a participação pública na gestão dos recursos
@@ -78,7 +78,7 @@
           <p>Para que as decisões <br>
             da Diretoria Colegiada <br>
             da ANA são precedidas <br>
-            de processos participativos?
+            de processos de participação?
           </p>
         </div>
         <div class="box-branco">
@@ -98,8 +98,7 @@
                   </picture>
 
                 </div>
-                <p class="text-box">Propiciar aos interessados envolvidos a possibilidade de encaminhar opiniões e
-                  sugestões</p>
+                <p class="text-box">recolher subsídios e informações</p>
               </div>
               <div class="box-vermelho anside2">
                 <div class="table-cell">
@@ -116,8 +115,7 @@
 
 
                 </div>
-                <p class="text-box">Propiciar aos interessados envolvidos a possibilidade de encaminhar opiniões e
-                  sugestões</p>
+                <p class="text-box">propiciar aos interessados envolvidos a possibilidade de encaminhamento de opiniões e sugestões</p>
               </div>
             </div>
 
@@ -137,8 +135,7 @@
                   </picture>
 
                 </div>
-                <p class="text-box">Identificar, da forma mais ampla possível, todos os aspectos relevantes da matéria
-                  que é objeto do processo de participação</p>
+                <p class="text-box">identificar, da forma mais ampla possível, todos os aspectos relevantes da matéria objeto do processo de participação</p>
               </div>
               <div class="box-azul1 anside4">
                 <div class="table-cell">
@@ -154,8 +151,7 @@
                   </picture>
 
                 </div>
-                <p class="text-box">Propiciar aos interessados envolvidos a possibilidade de encaminhar opiniões e
-                  sugestões</p>
+                <p class="text-box">dar publicidade à ação da ANA</p>
               </div>
             </div>
 
@@ -171,8 +167,7 @@
 
       <div class="texto-main-top  justify-center">
         <p class="width-70">
-          Quem são os principais beneficiados
-          por essas decisões?
+          Quem são os os principais beneficiados dessas decisões?
         </p>
 
       </div>
@@ -192,7 +187,7 @@
       </div>
       <div class="texto-main">
         <p class="width-70-1">
-          Usuários dos recursos hídricos
+          Agentes econômicos
         </p>
 
       </div>
@@ -230,7 +225,7 @@
       </div>
       <div class="texto-main ">
         <p class="width-50-1">
-          Agentes econômicos
+          Usuários de recursos hídricos
         </p>
 
       </div>
@@ -267,7 +262,7 @@
 
                   <div class="width-50-bottom">
 
-                    <p class="text-box-1">Consultas e audiências públicas</p>
+                    <p class="text-box-1">Sala de Crise</p>
                   </div>
                   <div class="teste-img">
                     <div>
@@ -304,7 +299,7 @@
                 <div class="teste-display">
                   <div class="width-50-bottom">
 
-                    <p class="text-box-1">Consultas e audiências públicas</p>
+                    <p class="text-box-1">Reunião Pública de Alocação de Água</p>
                   </div>
                   <div class="teste-img">
                     <div>
@@ -340,7 +335,7 @@
                 <div class="teste-display">
                   <div class="width-50-bottom">
 
-                    <p class="text-box-1">Consultas e audiências públicas</p>
+                    <p class="text-box-1">Monitoramento e Eventos Críticos</p>
                   </div>
                   <div class="teste-img">
                     <div>
@@ -377,7 +372,7 @@
                 <div class="teste-display">
                   <div class="width-50-bottom">
 
-                    <p class="text-box-1">Consultas e audiências públicas</p>
+                    <p class="text-box-1">Fortalecimento dos entes do SINGREH</p>
                   </div>
                   <div class="teste-img">
                     <div>
@@ -411,9 +406,9 @@
                   </div>
                 </div>
                 <div class="teste-display">
-                  <div class="width-50-bottom">
+                  <div class="width-50-bottom ">
 
-                    <p class="text-box-1">Consultas e audiências públicas</p>
+                    <p class="text-box-1">Você sabia que a ANA tem um Sistema de Participação Social? Acesse:</p>
                   </div>
                   <div class="teste-img">
                     <div>
